added ability to add more than one interface for each bridge port

--- a/templates/etc/network/interfaces.j2
+++ b/templates/etc/network/interfaces.j2
@@ -6,21 +6,23 @@ iface lo inet loopback
 {%   for item in ovs_bridges %}
 {%     if item.state == "present" %}
 {%       if item.config_etc_interfaces is defined and item.config_etc_interfaces %}
-{%         if item.int is defined %}
-{%           if item.comment is defined %}
+{%         if item.interfaces is defined %}
+{%           for int in item.interfaces %}
+{%             if item.comment is defined %}
 
 # {{ item.comment }}
-{%           endif %}
-# auto {{ item.int }}
-allow-{{ item.name }} {{ item.int }}
-iface {{ item.int }} inet manual
+{%             endif %}
+# auto {{ int }}
+allow-{{ item.name }} {{ int }}
+iface {{ int }} inet manual
 ovs_bridge {{ item.name }}
 ovs_type OVSPort
-{%           if item.wireless_network is defined and item.wireless_network %}
+{%             if item.wireless_network is defined and item.wireless_network %}
 wpa-ssid {{ item.wpa_ssid }}
 wpa-psk {{ item.wpa_psk }}
-{%           endif %}
-{%       endif %}
+{%             endif %}
+{%           endfor %}
+{%         endif %}
 
 # {{ item.comment }}
 auto {{ item.name }}
@@ -36,17 +38,17 @@ netmask {{ item.netmask }}
 {%           if item.gateway is defined %}
 gateway {{ item.gateway }}
 {%           endif %}
-{%           if item.int is defined %}
-ovs_ports {{ item.int }}
+{%           if item.interfaces is defined %}
+ovs_ports {% for int item.interfaces %}{{ int }}{% if not loop.last %} {% endif %}{% endfor %}
 {%           endif %}
 ovs_type OVSBridge
 {%         endif %}
 {%       endif %}
 {%       if item.method == "DHCP" or item.method == "dhcp" %}
-ovs_type OVSBridge
-{%         if item.int is defined %}
-ovs_ports {{ item.int }}
+{%         if item.interfaces is defined %}
+ovs_ports {% for int item.interfaces %}{{ int }}{% if not loop.last %} {% endif %}{% endfor %}
 {%         endif %}
+ovs_type OVSBridge
 {%       endif %}
 {%     endif %}
 {%   endfor %}
